--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ qt_add_qml_module(sensorsshowcase
         QML_FILES DefinePatternPage.qml
         QML_FILES LoadingPage.qml
         QML_FILES MainPage.qml
-        QML_FILES CustomPath.qml
+        # QML_FILES CustomPath.qml
         QML_FILES LiveLocation.qml
         QML_FILES ProcessorSingleton.qml
 )
